# patih

./: .dockerignore  .env.example  .gitattributes  .gitignore  ARCHITECTURE.md  Dockerfile  LICENSE  Makefile  README.id.md  README.md  chainlit.md  pyproject.toml
.chainlit/: config.toml
app/: __init__.py  config.py  logging.py
app/eval/: __init__.py  citation_accuracy.py  cli.py  latency_meter.py  ragas_runner.py  ratelimit_endurance.py  refusal_precision.py  report.py  testset_loader.py
app/infra/: __init__.py  healthcheck.py  langfuse_client.py
app/ingest/: __init__.py  chunker.py  cli.py  doc_registry.py  generic_ingest.py  pdf_loader.py  structure_parser.py  validators.py
app/llm/: __init__.py  cli.py  gateway.py  generator.py  lang_detect.py  prompts.py  rate_limiter.py  translator.py
app/retrieval/: __init__.py  always_on.py  bm25_store.py  cross_ref_resolver.py  embedder.py  hybrid.py  indexer.py  parent_expander.py  pipeline.py  vector_store.py
app/ui/: __init__.py  api_sidecar.py  chainlit_app.py  components.py  history.py
app/validators/: __init__.py  citation_extractor.py  cli.py  entity_grounding.py  pipeline.py  relation_preservation.py  whitelist_validator.py
configs/: chunking.yaml  litellm.yaml
configs/prompts/: fewshot.md  system_bilingual.md  system_id.md
data/parsed/: other-7-2023.json  perbup-24-2021.json  perbup-39-2022.json  perbup-46-2016.json  permenkes-21-2020.json  permensos-21-2019.json  permensos-22-2016.json  permensos-28-2017.json  permensos-3-2025.json  permensos-5-2024.json  permensos-8-2021.json  permensos-8-2023.json  permensos-8-2024.json  pp-39-2012.json  rpjmn-2025-2029.json  sop-administrasi-surat-keluar.json  sop-pendataan-kemiskinan.json  uu-13-2011.json  uu-20-2023.json  uu-35-2014.json  uu-39-1999.json  uu-9-1961.json
data/registry/: documents.json
data/test/: permensos8_10q_en.jsonl  permensos8_50q.jsonl
deploy/: Dockerfile.app  docker-compose.yml
deploy/cloudflared/: config.yml
deploy/scripts/: backup_chroma.sh  oracle_deploy.sh  oracle_provision.sh  quantize_e5.py  smoke_test.sh
deploy/systemd/: chatbot.service  langfuse.service
tests/golden/: permensos8_5q_smoke.jsonl
tools/: bulk_ingest.py  bulk_ingest_report.json  generate_meta_sidecars.py  inbox_watcher.py  meta_sidecar_manifest.json  smoke_multidoc.py  triage_pdfs.py  triage_report.json
(+25 files in other folders)
